complet half work

--- a/index.html
+++ b/index.html
@@ -8,6 +8,90 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+   <main>
+    <section class="container">
+        <div class="top-players">
+            <h2 class="title">Top Player</h2>
+            <div class="players">
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <h4 class="player-name">John Smith</h4>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <h4 class="player-name">John Smith</h4>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <h4 class="player-name">John Smith</h4>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <h4 class="player-name">John Smith</h4>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <h4 class="player-name">John Smith</h4>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <h4 class="player-name">John Smith</h4>
+                </div>
+            </div>
+            
+        </div>  
+        <hr class="line">
+        <!-- ------------------blogs section -------------- -->
+       <div class="top-blogs">
+        <h2 class="blogs-title">Top blogs</h2>
+        <div class="blogs">
+            <article class="blog-details">
+                <div class="thambnail">
+                    <div>
+                        <img src="images/blogs/blog-1.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
+                        <p class="author">By <a href="">Jeremiah Lam</a></p>
+                    </div>
+                </div>
+            </article>
+            <article class="blog-details">
+                <div class="thambnail">
+                    <div>
+                        <img src="images/blogs/blog-2.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
+                        <p class="author">By <a href="">Jeremiah Lam</a></p>
+                    </div>
+                </div>
+            </article>
+            <article class="blog-details">
+                <div class="thambnail">
+                    <div>
+                        <img src="images/blogs/blog-3.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
+                        <p class="author">By <a href="">Jeremiah Lam</a></p>
+                    </div>
+                </div>
+            </article>
+            <article class="blog-details">
+                <div class="thambnail">
+                    <div>
+                        <img src="images/blogs/blog-4.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
+                        <p class="author">By <a href="">Jeremiah Lam</a></p>
+                    </div>
+                </div>
+            </article>
+        </div>
+       </div>
+    </section> 
+   </main>
 </body>
 </html>
