added author name

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                     <div>
                         <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
-                        <p class="author">By <a href="">Jeremiah Lam</a></p>
+                        <p class="author">By <a href=""> Danny Sapio</a></p>
                     </div>
                 </div>
             </article>
@@ -62,8 +62,8 @@
                         <img src="images/blogs/blog-2.png" alt="">
                     </div>
                     <div>
-                        <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
-                        <p class="author">By <a href="">Jeremiah Lam</a></p>
+                        <h3 class="headline">UI cheat sheet:list vs grids<br> UI/UX Goodies</h3>
+                        <p class="author">By <a>Tess Gadd</a></p>
                     </div>
                 </div>
             </article>
@@ -73,7 +73,7 @@
                         <img src="images/blogs/blog-3.png" alt="">
                     </div>
                     <div>
-                        <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
+                       <h3 class="headline">7 typography tips for interface design</h3>
                         <p class="author">By <a href="">Jeremiah Lam</a></p>
                     </div>
                 </div>
@@ -84,8 +84,8 @@
                         <img src="images/blogs/blog-4.png" alt="">
                     </div>
                     <div>
-                        <h3 class="headline">13 of My Favorit <br> UI/UX Goodies</h3>
-                        <p class="author">By <a href="">Jeremiah Lam</a></p>
+                        <h3 class="headline">Your logo is copied</h3>
+                        <p class="author">By <a href="">Ferdinand Vogler</a></p>
                     </div>
                 </div>
             </article>
@@ -93,5 +93,6 @@
        </div>
     </section> 
    </main>
+   <h1>Hey Sinamika</h1>
 </body>
 </html>
