--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/68e6259085.js" crossorigin="anonymous"></script>
 </head>
 <body>
    <main>
@@ -92,7 +93,62 @@
         </div>
        </div>
     </section> 
+    <!-------------------lates corses  ------------- -->
+    <section class="container footer">
+        <h2 class="cours-title">Lates Courses</h2>
+        <div class="courses">
+            <div class="cours">
+                <div class="courses-template">
+                    <div class="react">
+                        <img src="images/courses/course-1.png" alt="">
+                        <h2>React - The Complete Guide 2020</h2>
+                        <a href="">Reed Krakoff.</a>
+                        <div class="cours-info">
+                            <div class="rating">
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <strong>4.5</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="react">
+                        <img src="images/courses/course-2.png" alt="">
+                        <h2>Powerpoint 2020 Master Powerpoint Cour</h2>
+                        <a href="">Walter Scott.</a>
+                        <div class="cours-info">
+                            <div class="rating">
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <strong>4.3</strong>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="react">
+                        <img src="images/courses/course-3.png" alt="">
+                        <h2>The Complete JavaScript Course 2020</h2>
+                        <a href="">Reed Krakoff.</a>
+                        <div class="cours-info">
+                            <div class="rating">
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star emty"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <strong>4.5</strong>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
    </main>
-   <h1>Hey Sinamika</h1>
 </body>
 </html>
